--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -1,4 +1,5 @@
 <div class="content_post" style="background-image: url(<%= tweet.image %>);">
+    <%# <%= image_tag @tweets.image, class: "content_post" %>% %>
       <div class="more">
         <span><%= image_tag 'arrow_top.png' %></span>
         <ul class="more_list">
