--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body class = body>
    <header class="header">
       <div class="header__bar row">
         <h1 class="grid-6"><a href="/">CampTweet</a></h1>
