CarrierWaveを使用しての画像表示

--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -2,7 +2,7 @@
       <%= form.text_area :text, placeholder: "タイトル" %>
       <%= form.label :prefecture, "撮影場所" %>
       <%= form.collection_select :prefecture, Prefecture.all, :id, :name, {include_blank: "---"}, {required: true}  %>
-      <%= form.file_field :image, id:"item-image" %>
+      <%= form.file_field :image %>
       <%= form.label :rank, "評価" %>
       <%= form.collection_select :rank, Rank.all, :id, :name, {include_blank: "---"}, {required: true}  %>
       <%= form.text_area :text, placeholder: "text", rows: "10" %>
