--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -638,7 +638,10 @@ ul li {
 body,
 html {
   height: 100%;
-  background-color: #f5f5f3;
+  background-color: #AEFFBD;
+  background-image: url("image3.jpg");
+  background-size: 100% auto;
+  background-attachment: fixed;
 }
 
 body {
@@ -738,7 +741,7 @@ header.header div.header__bar.row div.grid-6 a.post:hover {
 header.header {
   padding: 10px;
   border-bottom: 1px solid #D8D8D8;
-  background-color: #CCFFFF;
+  background-color: white;
   position: fixed;
   top: 0;
   left: 0;
@@ -1059,5 +1062,7 @@ footer p {
 }
 
 .body{
-  background-color: #CCFF99;
+  background-image: url("image3.jpg");
+  background-size: 100% auto;
+  
 }
